# file-utilities

./: LICENSE  README.md  pyproject.toml
src/file_utilities/core/: docx.py  file.py  image.py
src/file_utilities/file/: docx.py  file.py
src/file_utilities/image/: image.py  image_convert.py  image_converter.py  image_resize.py  resize_image.py
src/file_utilities/image_utils/: png_to_webp.py  resize_png.py  utilities.py
src/file_utilities/shane_bonkowski_dot_com/: docx_to_written_content.py
src/file_utilities/tools/: docx_to_written_content.py  image_convert.py  image_resize.py
tests/: conftest.py  test_docx_to_written_content.py  test_image.py
tests/test_data/docx_test_data/: expected_output_p_empty_spaces.txt  expected_output_p_no_empty_spaces.txt  input_p_empty_spaces.docx  input_p_no_empty_spaces.docx
