[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file_utilities"
version = "1.1.0"
description = "A collection of Python scripts to simplify various file-related tasks."
authors = [{ name = "Shane Bonkowski", email = "3ravens3@gmail.com" }]
dependencies = [
    "pillow>=11.0.0",
    "pytest>=8.3.0"
]
requires-python = ">=3.7"
license = { text = "MIT" }  
classifiers = ["License :: OSI Approved :: MIT License"]

[project.scripts]
image_convert = "file_utilities.image.image_convert:main"
image_resize = "file_utilities.image.image_resize:main"

[tool.setuptools.packages.find]
where = ["src"]
